<resources>
    <string name="app_name">GPS Tracker App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="menu_joinCircle">Join Circle</string>
    <string name="menu_myCircles">My Circle</string>
    <string name="menu_joinedCircles">Joined Circles</string>
    <string name="menu_inviteMembers">Invite Members</string>
    <string name="menu_shareLocation">Share Location(WhatsApp)</string>
    <string name="menu_stopSharingLoc">Stop Sharing Location</string>
    <string name="menu_signOut">Sign out</string>
    <string name="title_activity_my_navigation">Map</string>
    <string name="title_activity_user_location_main">UserLocationMainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
