<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_joinCircle"
            android:title="@string/menu_joinCircle" />
        <item
            android:id="@+id/nav_myCircle"
            android:title="@string/menu_myCircles" />
        <item
            android:id="@+id/nav_joinedCircles"
            android:title="@string/menu_joinedCircles" />
        <item
            android:id="@+id/nav_inviteMembers"
            android:title="@string/menu_inviteMembers" />
        <item
            android:id="@+id/nav_shareLoc"
            android:title="@string/menu_shareLocation" />
        <item
            android:id="@+id/nav_stopSharingLoc"
            android:title="@string/menu_stopSharingLoc" />
        <item
            android:id="@+id/nav_SignOut"
            android:title="@string/menu_signOut" />
    </group>



</menu>
